--- a/.github/workflows/bear.yaml
+++ b/.github/workflows/bear.yaml
@@ -14,6 +14,6 @@ jobs:
       uses: akhileshns/heroku-deploy@v3.12.12 
       with:
         heroku_api_key: ${{ secrets.heroku_api_key }}
-        heroku_app_name: mybearapp
+        heroku_app_name: dov-bear25
         heroku_email: ${{ secrets.email }}
         branch: ${{ github.ref_name }}
